# site2skill

./: pyproject.toml  test_filename_conversion.py  test_integration.py  test_site2skill.py
.github/workflows/: test.yml
site2skill/: generate_skill_structure.py  main.py  utils.py
